# Connect-four

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: cmake-single-platform.yml
cmake/: dev-mode.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  variables.cmake
docs/: Doxyfile.in
html/: md_BUILDING.html  md_HACKING.html  md_README.html  pages.html
html/search/: all_1.js  all_2.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
src/: board.cpp  board.h  computer.cpp  computer.h  game.cpp  game.h  human_player.cpp  human_player.h  iuser.h  main.cpp  player.cpp  player.h
test/: CMakeLists.txt
test/src/: connect-four_test.cpp
